# unified-llm

./: .gitignore  README.md  pyproject.toml  verify_providers.py
configs/: default.yaml
examples/: advanced_usage.py  benchmark_usage.py
tests/: test_benchmark.py  test_core.py  test_huggingface_provider.py  test_litellm_provider.py  test_providers_live.py
unified_llm/: __init__.py  cli.py  client.py  config.py  registry.py  types.py
unified_llm/benchmark/: __init__.py  adapter.py  runner.py  types.py
unified_llm/optimization/: __init__.py
unified_llm/perf/: __init__.py
unified_llm/providers/: __init__.py  base.py  huggingface_provider.py  litellm_provider.py
